# amazing_hunting

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
amazing_hunting/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_sex.py  0003_alter_user_sex.py  0004_user_role.py  0005_alter_user_options.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retrive_test.py
vacancies/: admin.py  models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_experience_alter_vacancy_slug.py  0008_alter_vacancy_created.py  0009_vacancy_updated_at_alter_vacancy_created.py
